# xbmc-pvr-addons

./: configure.ac
addons/: Makefile.am
addons/pvr.tvh.autorec/: Makefile.am
addons/pvr.tvh.autorec/addon/: addon.xml.in  changelog.txt
addons/pvr.tvh.autorec/addon/resources/: settings.xml
addons/pvr.tvh.autorec/addon/resources/language/Dutch/: strings.po
addons/pvr.tvh.autorec/addon/resources/language/English/: strings.po
addons/pvr.tvh.autorec/addon/resources/skins/Confluence/720p/: DialogDeleteTimer.xml  DialogRecord.xml  DialogTranscode.xml
addons/pvr.tvh.autorec/addon/resources/skins/Titan MediaBrowser/1080i/: DialogRecord.xml
addons/pvr.tvh.autorec/project/VS2010Express/: pvrclient_tvh.vcxproj  pvrclient_tvh.vcxproj.filters
addons/pvr.tvh.autorec/src/: AsyncState.h  CGUIDialogDeleteTimer.cpp  CGUIDialogDeleteTimer.h  CGUIDialogRecord.cpp  CGUIDialogRecord.h  HTSPTypes.h  Tvheadend.cpp  Tvheadend.h  client.cpp  client.h
addons/pvr.tvh/src/: HTSPTypes.h  Tvheadend.cpp  Tvheadend.h
